# -craft

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  dashcraft_rpc.py  pyproject.toml  spread.yaml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: _tests.yaml  ci.yaml  security.yaml
.pi/extensions/dashcraft/: index.ts
.pi/extensions/juju-charm/: index.ts  templates.ts
.pi/skills/debugging/: SKILL.md
.pi/skills/quality-review/: SKILL.md
demo/: README.md  dashcraft-demo.cast  index.html  pane-flow.sh  record.sh  typewriter.py
skills/charm-testing/: SKILL.md
skills/observability/: SKILL.md
skills/quick-charm-workflow/: SKILL.md
skills/relations/: SKILL.md
src/dashcraft/: __init__.py  analysis.py  cli.py  config.py  pi.py  templates.py  upstream.py
src/pypi_attest/: __init__.py
src/quickpack/: __init__.py  __main__.py  cli.py  jujuignore.py  metadata.py  pack.py  parts.py
tests/: charm-helpers.sh
tests/charm-init/: task.yaml
tests/charm-lint/: task.yaml
tests/charm-unit/: task.yaml
tests/dashcraft-smoke/: task.yaml
tests/pack-booklore/: task.yaml
tests/pack-colibri-social/: task.yaml
tests/pack-ironcalc/: task.yaml
tests/pack-rybbit/: task.yaml
tests/pack-simplomon/: task.yaml
tests/pack-suite-docs/: task.yaml
tests/pack-upvote-rss/: task.yaml
tests/spread/: charm-helpers.sh
tests/spread/charm-init/: task.yaml
tests/spread/charm-lint/: task.yaml
tests/spread/charm-unit/: task.yaml
tests/spread/dashcraft-help/: task.yaml
tests/spread/dashcraft-smoke/: task.yaml
tests/spread/deploy-booklore/: dashcraft.yaml  task.yaml
tests/spread/deploy-upvote-rss/: dashcraft.yaml  task.yaml
tests/spread/pack-booklore/: dashcraft.yaml  task.yaml
tests/spread/pack-clone-bad-url/: dashcraft.yaml  task.yaml
tests/spread/pack-clone-smoke/: dashcraft.yaml  task.yaml
tests/unit/: conftest.py  helpers.py  test_analysis.py  test_cli.py  test_config.py  test_filled_templates.py  test_pi.py  test_upstream.py
(+19 files in other folders)
