[project]
name = "dashcraft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
dashcraft = "dashcraft:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.11",
    "ty>=0.0.35",
]

[tool.ruff]
line-length = 99
target-version = "py314"
extend-exclude = [".clones", "src/quickpack", "src/pypi_attest"]

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001",
    # pep8-naming
    "N",
    # flake8-builtins
    "A",
    # pyupgrade
    "UP",
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # Ruff specific
    "RUF",
    # Perflint
    "PERF",
    # pyflakes-docstrings
    "D",
]
ignore = [
    # Function argument `x` is shadowing a Python builtin
    'A002',
    # Use of `assert` detected
    'S101',
    # `subprocess` call: check for execution of untrusted input
    'S603',
    # Use a single `with` statement with multiple contexts — sometimes nested is clearer
    'SIM117',
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    # All documentation linting.
    "D",
    # Line too long
    "E501",
]
"src/dashcraft/templates.py" = [
    # Long generated template strings
    "E501",
]

[tool.pyright]
include = ['src', 'tests']
pythonVersion = '3.14'
typeCheckingMode = 'strict'
reportPrivateUsage = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportMissingParameterType = false

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.environment]
python-version = "3.14"

[tool.pytest.ini_options]
pythonpath = [
    "src",
    ".",
]

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"
